--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "dependencies": {
     "@aws-cdk/aws-cloudfront": "^1.163.1",
     "@aws-cdk/aws-cloudfront-origins": "^1.163.1",
+    "@aws-cdk/aws-dynamodb": "^1.163.2",
     "@aws-cdk/aws-s3": "^1.163.1",
     "@aws-cdk/aws-s3-deployment": "^1.163.1",
-    "@aws-cdk/core": "^1.163.1",
+    "@aws-cdk/core": "^1.163.2",
     "aws-cdk-lib": "2.25.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
